// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser: precedence > lambda with annotation: \\x -> y : Int -> Int 1`] = `
{
  "ann": {
    "icit": "Explicit",
    "lhs": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "Int",
      },
    },
    "rhs": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "Int",
      },
    },
    "type": "arrow",
  },
  "term": {
    "annotation": undefined,
    "body": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "y",
      },
    },
    "icit": "Explicit",
    "type": "lambda",
    "variable": "x",
  },
  "type": "annotation",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: precedence > lambda with application: \\x -> f x 1`] = `
{
  "annotation": undefined,
  "body": {
    "arg": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "x",
      },
    },
    "fn": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "f",
      },
    },
    "icit": "Explicit",
    "type": "application",
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: precedence > lambda with chained projection and application: \\x -> x.y.z w 1`] = `
{
  "annotation": undefined,
  "body": {
    "arg": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "w",
      },
    },
    "fn": {
      "label": "z",
      "term": {
        "label": "y",
        "term": {
          "type": "var",
          "variable": {
            "type": "name",
            "value": "x",
          },
        },
        "type": "projection",
      },
      "type": "projection",
    },
    "icit": "Explicit",
    "type": "application",
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: precedence > lambda with projection and application: \\x -> x.y z 1`] = `
{
  "annotation": undefined,
  "body": {
    "arg": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "z",
      },
    },
    "fn": {
      "label": "y",
      "term": {
        "type": "var",
        "variable": {
          "type": "name",
          "value": "x",
        },
      },
      "type": "projection",
    },
    "icit": "Explicit",
    "type": "application",
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: precedence > lambda with projection: \\x -> x.y 1`] = `
{
  "annotation": undefined,
  "body": {
    "label": "y",
    "term": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "x",
      },
    },
    "type": "projection",
  },
  "icit": "Explicit",
  "type": "lambda",
  "variable": "x",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: precedence > pi with applications: (a:Type) -> (b:Type) -> f a -> f b 1`] = `
{
  "annotation": {
    "type": "lit",
    "value": {
      "type": "Atom",
      "value": "Type",
    },
  },
  "body": {
    "annotation": {
      "type": "lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "body": {
      "icit": "Explicit",
      "lhs": {
        "arg": {
          "type": "var",
          "variable": {
            "type": "name",
            "value": "a",
          },
        },
        "fn": {
          "type": "var",
          "variable": {
            "type": "name",
            "value": "f",
          },
        },
        "icit": "Explicit",
        "type": "application",
      },
      "rhs": {
        "arg": {
          "type": "var",
          "variable": {
            "type": "name",
            "value": "b",
          },
        },
        "fn": {
          "type": "var",
          "variable": {
            "type": "name",
            "value": "f",
          },
        },
        "icit": "Explicit",
        "type": "application",
      },
      "type": "arrow",
    },
    "icit": "Explicit",
    "type": "pi",
    "variable": "b",
  },
  "icit": "Explicit",
  "type": "pi",
  "variable": "a",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: precedence > pi with row terms: (a:Type) -> (b:Type) -> { x: a, y: b } 1`] = `
{
  "annotation": {
    "type": "lit",
    "value": {
      "type": "Atom",
      "value": "Type",
    },
  },
  "body": {
    "annotation": {
      "type": "lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "body": {
      "row": {
        "label": "x",
        "row": {
          "label": "y",
          "row": {
            "type": "empty",
          },
          "type": "extension",
          "value": {
            "type": "var",
            "variable": {
              "type": "name",
              "value": "b",
            },
          },
        },
        "type": "extension",
        "value": {
          "type": "var",
          "variable": {
            "type": "name",
            "value": "a",
          },
        },
      },
      "type": "struct",
    },
    "icit": "Explicit",
    "type": "pi",
    "variable": "b",
  },
  "icit": "Explicit",
  "type": "pi",
  "variable": "a",
  Symbol(snapshot:stripped): true,
}
`;

exports[`parser: precedence > projection with application: x.y z 1`] = `
{
  "arg": {
    "type": "var",
    "variable": {
      "type": "name",
      "value": "z",
    },
  },
  "fn": {
    "label": "y",
    "term": {
      "type": "var",
      "variable": {
        "type": "name",
        "value": "x",
      },
    },
    "type": "projection",
  },
  "icit": "Explicit",
  "type": "application",
  Symbol(snapshot:stripped): true,
}
`;
